---
source: influxdb3_write/src/write_buffer/mod.rs
expression: catalog_json
---
{
  "databases": [
    [
      0,
      {
        "deleted": false,
        "id": 0,
        "name": "db",
        "processing_engine_triggers": [],
        "tables": [
          [
            0,
            {
              "cols": [
                [
                  1,
                  {
                    "id": 1,
                    "influx_type": "field",
                    "name": "f1",
                    "nullable": true,
                    "type": "bool"
                  }
                ],
                [
                  3,
                  {
                    "id": 3,
                    "influx_type": "field",
                    "name": "f2",
                    "nullable": true,
                    "type": "i64"
                  }
                ],
                [
                  0,
                  {
                    "id": 0,
                    "influx_type": "tag",
                    "name": "t1",
                    "nullable": true,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    }
                  }
                ],
                [
                  2,
                  {
                    "id": 2,
                    "influx_type": "time",
                    "name": "time",
                    "nullable": false,
                    "type": {
                      "time": [
                        "ns",
                        null
                      ]
                    }
                  }
                ]
              ],
              "deleted": false,
              "key": [
                0
              ],
              "last_caches": [
                {
                  "keys": [
                    0
                  ],
                  "n": 1,
                  "name": "cache",
                  "table": "table",
                  "table_id": 0,
                  "ttl": 14400,
                  "vals": null
                }
              ],
              "table_id": 0,
              "table_name": "table"
            }
          ]
        ]
      }
    ]
  ],
  "instance_id": "[uuid]",
  "node_id": "test_host",
  "sequence": 3,
  "version": "1"
}
